Added client secret renewal. Minor changes.

--- a/ClientRegistrationExample/appsettings.json
+++ b/ClientRegistrationExample/appsettings.json
@@ -8,8 +8,12 @@
   "ChildOrganizationNumbers": null,
   "ConfirmationUri": "https://path",
   "ClientDraftUri": "https://path",
+  "ClientStatusUri": "https://path",
+  "ClientSecretUri": "https://path",
   "ClientDraftApiKeyHeader": "api-key",
   "ClientDraftApiKey": "key",
   "RedirectPort": 1337,
-  "RedirectPath": "callback"
+  "RedirectPath": "callback",
+  "HtmlTitle": "Client Registration Example",
+  "HtmlBody": "<h1>Du kan returnere til fagapplikasjonen din nå.</h1><p>Ikke lukk nettleseren hvis du ønsker å gjenbruke HelseID-påloggingen din, hvis mulig.</p>"
 }
