Change config structure.

--- a/ClientRegistrationExample/appsettings.json
+++ b/ClientRegistrationExample/appsettings.json
@@ -1,19 +1,28 @@
 {
-  "Authority": "Authority",
-  "OrganizationNumber": "123456789",
-  "ApiScopes": [ "something" ],
-  "AudienceSpecificClientClaims": null,
-  "RedirectUris": null,
-  "PostLogoutRedirectUris": null,
-  "ChildOrganizationNumbers": null,
-  "ConfirmationUri": "https://path",
-  "ClientDraftUri": "https://path",
-  "ClientStatusUri": "https://path",
-  "ClientSecretUri": "https://path",
-  "ClientDraftApiKeyHeader": "api-key",
-  "ClientDraftApiKey": "key",
-  "RedirectPort": 1337,
-  "RedirectPath": "callback",
-  "HtmlTitle": "Client Registration Example",
-  "HtmlBody": "<h1>Du kan returnere til fagapplikasjonen din nå.</h1><p>Ikke lukk nettleseren hvis du ønsker å gjenbruke HelseID-påloggingen din, hvis mulig.</p>"
+  "HelseID": {
+    "Authority": "https://helseid-sts.test.nhn.no"
+  },
+  "Selvbetjening": {
+    "ConfirmationUri": "https://selvbetjening.test.nhn.no/confirm-client/<client_id>?redirectPort=<port>&redirectPath=<path>",
+    "ApiUri": "https://ext.selvbetjening.test.nhn.no",
+    "ClientDraftEndpoint": "/v0.1/client-drafts",
+    "ClientStatusEndpoint": "/v0.1/client-status",
+    "ClientSecretEndpoint": "/v0.1/client-secret",
+    "ClientDraftApiKeyHeader": "api-key",
+    "ClientDraftApiKey": "[secret]"
+  },
+  "ClientDraft": {
+    "OrganizationNumber": "123456789",
+    "ApiScopes": [ "nhn:selvbetjening/client", "something_else" ],
+    "AudienceSpecificClientClaims": null,
+    "RedirectUris": null,
+    "PostLogoutRedirectUris": null,
+    "ChildOrganizationNumbers": null
+  },
+  "LocalHttpServer": {
+    "RedirectPort": 1337,
+    "RedirectPath": "callback",
+    "HtmlTitle": "Client Registration Example",
+    "HtmlBody": "<h1>Du kan returnere til fagapplikasjonen din nå.</h1><p>Ikke lukk nettleseren hvis du ønsker å gjenbruke HelseID-påloggingen din, hvis mulig.</p>"
+  }
 }
