--- a/ClientRegistrationExample/appsettings.json
+++ b/ClientRegistrationExample/appsettings.json
@@ -4,7 +4,7 @@
   },
   "Selvbetjening": {
     "ConfirmationUri": "https://selvbetjening.test.nhn.no/confirm-client/<client_id>?redirectPort=<port>&redirectPath=<path>",
-    "ApiUri": "https://ext.selvbetjening.test.nhn.no",
+    "ApiUri": "https://api.selvbetjening.test.nhn.no",
     "ClientDraftEndpoint": "/v0.1/client-drafts",
     "ClientStatusEndpoint": "/v0.1/client-status",
     "ClientSecretEndpoint": "/v0.1/client-secret",
