Change scope input parameter from string to string[]. Add getting access tokens without having to do user login.

--- a/ClientRegistrationExample/appsettings.json
+++ b/ClientRegistrationExample/appsettings.json
@@ -24,5 +24,8 @@
     "RedirectPath": "callback",
     "HtmlTitle": "Client Registration Example",
     "HtmlBody": "<h1>Du kan returnere til fagapplikasjonen din nå.</h1><p>Ikke lukk nettleseren hvis du ønsker å gjenbruke HelseID-påloggingen din, hvis mulig.</p>"
+  },
+  "App": {
+    "UserLogin": true
   }
 }
