Add DPoP support

--- a/ClientRegistrationExample/appsettings.json
+++ b/ClientRegistrationExample/appsettings.json
@@ -1,13 +1,14 @@
 {
   "HelseID": {
-    "Authority": "https://helseid-sts.test.nhn.no"
+    "Authority": "https://helseid-sts.test.nhn.no",
+    "UseDPoP": true
   },
   "Selvbetjening": {
     "ConfirmationUri": "https://selvbetjening.test.nhn.no/confirm-client/<client_id>?redirectPort=<port>&redirectPath=<path>",
     "ApiUri": "https://api.selvbetjening.test.nhn.no",
-    "ClientDraftEndpoint": "/v0.1/client-drafts",
-    "ClientStatusEndpoint": "/v0.1/client-status",
-    "ClientSecretEndpoint": "/v0.1/client-secret",
+    "ClientDraftEndpoint": "/v0.2/client-drafts",
+    "ClientStatusEndpoint": "/v0.2/client-status",
+    "ClientSecretEndpoint": "/v0.2/client-secret",
     "ClientDraftApiKeyHeader": "api-key",
     "ClientDraftApiKey": "[secret]"
   },
