--- a/ClientUpdateExample/appsettings.json
+++ b/ClientUpdateExample/appsettings.json
@@ -1,12 +1,13 @@
 {
   "HelseID": {
-    "Authority": "https://helseid-sts.test.nhn.no"
+    "Authority": "https://helseid-sts.test.nhn.no",
+    "UseDPoP": true
   },
   "Selvbetjening": {
     "ApiUri": "https://api.selvbetjening.test.nhn.no",
-    "ClientStatusEndpoint": "/v0.1/client-status",
-    "ClientSecretEndpoint": "/v0.1/client-secret",
-    "ClientEndpoint": "/v0.1/client"
+    "ClientStatusEndpoint": "/v0.2/client-status",
+    "ClientSecretEndpoint": "/v0.2/client-secret",
+    "ClientEndpoint": "/v0.2/client"
   },
   "Client": {
     "ClientId": "[ClientId]",
