--- a/Auth/Auth.csproj
+++ b/Auth/Auth.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
-	  <PackageReference Include="IdentityModel.OidcClient" Version="5.2.1" />
-	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
+	  <PackageReference Include="IdentityModel" Version="6.2.0" />
+	  <PackageReference Include="IdentityModel.OidcClient" Version="5.3.0-preview.1" />
+	  <PackageReference Include="IdentityModel.OidcClient.DPoP" Version="5.3.0-preview.1" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.34.0" />
   </ItemGroup>
 
   <ItemGroup>
