--- a/Auth/Auth.csproj
+++ b/Auth/Auth.csproj
@@ -8,11 +8,11 @@
 
   <ItemGroup>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
-	  <PackageReference Include="IdentityModel" Version="6.2.0" />
-	  <PackageReference Include="IdentityModel.OidcClient" Version="5.3.0-preview.1" />
-	  <PackageReference Include="IdentityModel.OidcClient.DPoP" Version="5.3.0-preview.1" />
-	  <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.35.0" />
-	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
+	  <PackageReference Include="IdentityModel" Version="7.0.0-preview.3" />
+	  <PackageReference Include="IdentityModel.OidcClient" Version="6.0.0-preview.1" />
+	  <PackageReference Include="IdentityModel.OidcClient.DPoP" Version="6.0.0-preview.1" />
+	  <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="7.4.0" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.4.0" />
   </ItemGroup>
 
   <ItemGroup>
