--- a/ClientRegistrationExample/appsettings.json
+++ b/ClientRegistrationExample/appsettings.json
@@ -7,7 +7,7 @@
     "ConfirmationUri": "https://selvbetjening.test.nhn.no/confirm-client/<client_id>?redirectPort=<port>&redirectPath=<path>",
     "ApiUri": "https://api.selvbetjening.test.nhn.no",
     "ClientDraftEndpoint": "/v1/client-drafts",
-    "ClientStatusEndpoint": "/v1/client-status",
+    "ClientStatusEndpoint": "/v1/client",
     "ClientSecretEndpoint": "/v1/client-secret",
     "ClientDraftApiKeyHeader": "api-key",
     "ClientDraftApiKey": "[secret]"
