Update samples and docs to reflects changes in selvbetjening

--- a/ClientRegistrationExample/appsettings.json
+++ b/ClientRegistrationExample/appsettings.json
@@ -14,9 +14,9 @@
   },
   "ClientDraft": {
     "OrganizationNumber": "123456789",
-    "ApiScopes": [ "nhn:selvbetjening/client", "something_else" ],
+    "ApiScopes": [ "nhn:selvbetjening/client" ],
     "AudienceSpecificClientClaims": null,
-    "RedirectUris": null,
+    "RedirectUris": [ "http://localhost:1337/callback"],
     "PostLogoutRedirectUris": null,
     "ChildOrganizationNumbers": null
   },
