--- a/Auth/Auth.csproj
+++ b/Auth/Auth.csproj
@@ -8,11 +8,11 @@
 
   <ItemGroup>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
-	  <PackageReference Include="IdentityModel" Version="7.0.0" />
-	  <PackageReference Include="IdentityModel.OidcClient" Version="6.0.0" />
-	  <PackageReference Include="IdentityModel.OidcClient.DPoP" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.12.1" />
-	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
+	  <PackageReference Include="Duende.IdentityModel" />
+	  <PackageReference Include="Duende.IdentityModel.OidcClient" />
+	  <PackageReference Include="Duende.IdentityModel.OidcClient.Extensions" />
+	  <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
   </ItemGroup>
 
   <ItemGroup>
