--- a/ClientRegistrationExample/ClientRegistrationExample.csproj
+++ b/ClientRegistrationExample/ClientRegistrationExample.csproj
@@ -6,8 +6,8 @@
 	<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.7" />
-	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.7" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Auth\Auth.csproj" />
